fix-overflow-item

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,9 @@
 .slick-slider {
   padding: 20px !important;
 }
+.slick-slider .slick-arrow {
+  z-index: 2 !important;
+}
 .slick-prev {
   left: 0 !important;
 }
@@ -118,6 +121,7 @@
 
 /* ===================HOME__SLIDER=================== */
 .home__slider {
+  z-index: 1;
   position: relative;
   color: white;
   /* padding: 0px 0px 0px 5vw; */
@@ -191,10 +195,10 @@
   z-index: 400;
   opacity: 0;
   visibility: hidden;
-  transition: all 0.5s linear;
+  /* transition: all 0.5s linear; */
 }
 .home__slider-item:hover .home__slider-detail {
-  /* position: a; */
+  /* position: fixed; */
   display: flex;
   visibility: visible;
   opacity: 1;
@@ -202,7 +206,7 @@
   width: 370px;
   color: white;
   box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
-  background: grey;
+  background: black;
 }
 .home__slider-item .home__slider-detail .home__item-img {
   width: 100%;
