--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   display: block;
   margin: 0px;
   background-color: #141414;
+  overflow-x: hidden;
 }
 .container {
   width: 92vw;
